# barectf-platform-pktring

./: .gitignore  README.md
.github/workflows/: ci.yml
example/: CMakeLists.txt  main.c  trace_config.h
example/config/: config.yaml  events.yaml  platform-trace-type.yaml
source/: barectf_platform_pktring.c
source/include/: barectf_platform_pktring.h
test/: CMakeLists.txt
test/tests/: CMakeLists.txt
test/tests/buffer_fill_mode/: config.yaml  main.c  trace_config.h
test/tests/common/: util.c  util.h
test/tests/critical_sections/: config.yaml  main.c  trace_config.h
test/tests/flush_pkt/: config.yaml  main.c
test/tests/no_op/: config.yaml  main.c  trace_config.h
test/tests/non_default_clock/: config.yaml  main.c  trace_config.h
test/tests/non_default_stream/: config.yaml  main.c  trace_config.h
test/tests/pktring/: config.yaml  main.c  trace_config.h
test/tests/single_pkt_context/: main.c  trace_config.h
